// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Teleport DOT from AssetHub to Frequency with DOT fee > Teleport DOT from AssetHub to Frequency with DOT fee > assethub-check-alice-frequency-foreign-assets-account 1`] = `
{
  "balance": 10000000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`Teleport DOT from AssetHub to Frequency with DOT fee > Teleport DOT from AssetHub to Frequency with DOT fee > assethub-events-after-teleport 1`] = `
[
  {
    "data": {
      "amount": "(rounded 2200000)",
      "from": "13UVJyLgBASGhE2ok3TvxUfaQBGUt88JCcdYjHvUhvQkFTTx",
      "to": "1LfAfKweyPjXs4JkKW4AxHPTe7pu4w4HjcZbEtB6a8vMqkd",
    },
    "method": "Transfer",
    "section": "balances",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1500)",
          "refTime": "(rounded 290000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 130000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Upgraded",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 33000000)",
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 100000000000,
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Burned",
    "section": "balances",
  },
  {
    "data": {
      "assetId": {
        "interior": {
          "X1": [
            {
              "Parachain": 4000,
            },
          ],
        },
        "parents": 1,
      },
      "balance": 1000000000,
      "owner": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Burned",
    "section": "foreignAssets",
  },
  {
    "data": {
      "account": "13cKp89CGRYN7bn8ZiHM6YnFhaNfwjneN6L2gXMuZCqNx1En",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13cKp89CGRYN7bn8ZiHM6YnFhaNfwjneN6L2gXMuZCqNx1En",
      "freeBalance": 30000000000,
    },
    "method": "Endowed",
    "section": "balances",
  },
  {
    "data": {
      "amount": 30000000000,
      "who": "13cKp89CGRYN7bn8ZiHM6YnFhaNfwjneN6L2gXMuZCqNx1En",
    },
    "method": "Minted",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 310000000)",
      "who": "13UVJyLnbVp9RBZYFwFGyDvVd1y27Tt8tkntv6Q7JVPhFsTB",
    },
    "method": "Minted",
    "section": "balances",
  },
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 4000,
            },
          ],
        },
        "parents": 1,
      },
      "message": [],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "amount": "(rounded 70000000000)",
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Minted",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 24000000)",
    },
    "method": "Issued",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 24000000)",
      "who": "13UVJyLgBASGhE2ok3TvxUfaQBGUt88JCcdYjHvUhvQkFTTx",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 27000)",
            "refTime": "(rounded 3300000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "amount": "(rounded 15000000)",
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 17000000)",
      "who": "13UVJyLgBASGhE2ok3TvxUfaQBGUt88JCcdYjHvUhvQkFTTx",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 17000000)",
      "tip": 0,
      "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 4000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "newScore": 7500000000000,
      "who": "16CorvriCpRTkhDWA2YSPAn8KmCMdys1peJhYFK3NA8wuVRW",
    },
    "method": "ScoreUpdated",
    "section": "voterList",
  },
  {
    "data": {
      "newScore": 6800000000000,
      "who": "15JXvRswW3d6U4ec7J83sxQL5iiee563NS2S9iE2qAMyS6DW",
    },
    "method": "ScoreUpdated",
    "section": "voterList",
  },
  {
    "data": {
      "newScore": "(rounded 6500000000000)",
      "who": "1pM3QfGN975GTYmdiBL4mLEM4CRmZ9hqTypwS3MNeywmwyn",
    },
    "method": "ScoreUpdated",
    "section": "voterList",
  },
  {
    "data": {
      "newScore": 5700000000000,
      "who": "13dqXbdXoDiJzmhcwNTP76zihNDpQp6Pg4J7VoARk5k7QK1P",
    },
    "method": "ScoreUpdated",
    "section": "voterList",
  },
  {
    "data": {
      "newScore": 6000000000000,
      "who": "12GZkSPRg1nvbDJBMt7rzd7Fp9YDJY2VJN3vVFR68e5492cd",
    },
    "method": "ScoreUpdated",
    "section": "voterList",
  },
]
`;

exports[`Teleport DOT from AssetHub to Frequency with DOT fee > Teleport DOT from AssetHub to Frequency with DOT fee > assethub-outbound-hrmp-messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v5": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 30000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
            ],
          },
          {
            "payFees": {
              "asset": {
                "fun": {
                  "fungible": 30000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
            },
          },
          {
            "receiveTeleportedAsset": [
              {
                "fun": {
                  "fungible": 1000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 0,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "refundSurplus": null,
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 2,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": [
                    {
                      "accountId32": {
                        "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "(redacted)",
          },
        ],
      },
    ],
    "recipient": 4000,
  },
]
`;

exports[`Teleport DOT from AssetHub to Frequency with DOT fee > Teleport DOT from AssetHub to Frequency with DOT fee > frequency-xcm-events-after-teleport 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 14000)",
        "refTime": "(rounded 1100000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`Teleport DOT from AssetHub to Frequency with DOT fee > Teleport DOT from AssetHub to Frequency with DOT fee > initial-assethub-check-system-account 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": 0,
    "free": 1000000000000,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`Teleport DOT from AssetHub to Frequency with DOT fee > Teleport DOT from AssetHub to Frequency with DOT fee > initial-frequency-check-system-account 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": 0,
    "free": 100000000000,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;
